# actix-web-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  coverage.yml  daily-audit.yml  general.yml
config/: base.yml  local.yml  prod.yml
endpoint_derive/: Cargo.toml
endpoint_derive/src/: lib.rs
endpoint_derive/tests/: test_derive_endpoint.rs
migrations/: 20221220154800_create_example_post_table.sql  20230126161936_add_users.sql
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
proc_macros/tests/: test_add_path_const.rs
scripts/: init.sh  init_db.sh  init_redis.sh
src/: configuration.rs  endpoint.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/auth/: password.rs
src/domain/: credentials.rs  email.rs  mod.rs  name.rs  parse.rs  post_data.rs  post_form.rs  util.rs
src/routes/: error.rs  example_get.rs  example_post.rs  health_check.rs  mod.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: configuration.rs  health_check_works.rs
tests/api/: example_auth.rs  example_post.rs  example_post_and_get.rs  health_check.rs  login.rs  main.rs  utils.rs
