[package]
name = "actix-web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-web-template"

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
config = "0.13.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.13"
serde_json = "1.0.91"
urlencoding = "2.1.2"
strfmt = "0.2.2"
