[package]
name = "actix-web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix-web-template"

[dependencies.proc-macros]
path = "proc_macros"

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
config = "0.13.3"
serde = { version = "1.0.151", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.2.2", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.17.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.2"
unicode-segmentation = "1.10.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
itertools = "0.10.5"
validator = "0.16.0"
argon2 = { version = "0.4.1", features = ["std"] }
rand = "0.8.5"
base64 = "0.21.0"

[dev-dependencies]
reqwest = "0.11.13"
serde_json = "1.0.91"
urlencoding = "2.1.2"
strfmt = "0.2.2"
claims = "0.7.1"
quickcheck = "1.0.3"
fake = "2.5.0"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
