[package]
name = "proc-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }
actix-web = "4.2.1"
proc-macro-error = "1.0.4"
convert_case = "0.6.0"
